--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <groupId>org.selenide.examples</groupId>
   <artifactId>selenide-allure-junit</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <properties>
-    <allure.version>1.4.3</allure.version>
+    <allure.version>1.4.15</allure.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -25,12 +25,12 @@
     <dependency>
       <groupId>ru.yandex.qatools.allure</groupId>
       <artifactId>allure-junit-adaptor</artifactId>
-      <version>1.4.8</version>
+      <version>${allure.version}</version>
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>2.16</version>
+      <version>2.20</version>
     </dependency>
   </dependencies>
 
@@ -57,7 +57,7 @@
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
           <argLine>
-            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.5/aspectjweaver-1.8.5.jar
+            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.6/aspectjweaver-1.8.6.jar
           </argLine>
           <properties>
             <property>
@@ -70,7 +70,7 @@
           <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.5</version>
+            <version>1.8.6</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -90,7 +90,7 @@
       <plugin>
         <groupId>ru.yandex.qatools.allure</groupId>
         <artifactId>allure-maven-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.2</version>
       </plugin>
     </plugins>
   </reporting>
