--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
   <groupId>org.selenide.examples</groupId>
   <artifactId>selenide-allure-junit</artifactId>
   <version>1.0</version>
-
+  
   <properties>
-    <allure.version>1.4.15</allure.version>
+    <allure.version>1.4.20</allure.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -30,21 +30,22 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>2.22</version>
+      <version>3.1</version>
     </dependency>
   </dependencies>
 
   <build>
+    <defaultGoal>dependency:copy-dependencies</defaultGoal>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-archetype-plugin</artifactId>
-        <version>2.2</version>
+        <version>2.4</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.2</version>
+        <version>3.3</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
@@ -53,11 +54,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <version>2.19.1</version>
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
           <argLine>
-            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.6/aspectjweaver-1.8.6.jar
+            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.8/aspectjweaver-1.8.8.jar
             -DBUILD_URL=${BUILD_URL}
           </argLine>
           <properties>
@@ -71,7 +72,7 @@
           <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.6</version>
+            <version>1.8.8</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -91,7 +92,7 @@
       <plugin>
         <groupId>ru.yandex.qatools.allure</groupId>
         <artifactId>allure-maven-plugin</artifactId>
-        <version>2.2</version>
+        <version>2.5</version>
       </plugin>
     </plugins>
   </reporting>
