--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,11 @@
 
   <groupId>org.selenide.examples</groupId>
   <artifactId>selenide-allure-junit</artifactId>
-  <version>1.0</version>
+  <version>2.0</version>
   
   <properties>
-    <allure.version>1.4.23</allure.version>
+    <allure.version>1.5.4</allure.version>
+    <aspectj.version>1.9.4</aspectj.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -30,7 +31,7 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>3.5.1</version>
+      <version>5.2.6</version>
     </dependency>
   </dependencies>
 
@@ -40,25 +41,25 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-archetype-plugin</artifactId>
-        <version>2.4</version>
+        <version>3.1.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
+        <version>2.22.2</version>
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
           <argLine>
-            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.8.9/aspectjweaver-1.8.9.jar
+            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
             -DBUILD_URL=${BUILD_URL}
           </argLine>
           <properties>
@@ -72,7 +73,7 @@
           <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.9</version>
+            <version>${aspectj.version}</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -92,7 +93,7 @@
       <plugin>
         <groupId>ru.yandex.qatools.allure</groupId>
         <artifactId>allure-maven-plugin</artifactId>
-        <version>2.5</version>
+        <version>2.6</version>
       </plugin>
     </plugins>
   </reporting>
