Fix error where loading java agent will fail if the maven repository path contains any white-space character.

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <configuration>
           <testFailureIgnore>false</testFailureIgnore>
           <argLine>
-            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
             -DBUILD_URL=${BUILD_URL}
           </argLine>
           <properties>
