--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <allure.version>1.5.4</allure.version>
         <aspectj.version>1.9.4</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- tests properties -->
+        <threads>1</threads>
     </properties>
 
     <name>Selenide + Allure + JUnit Example</name>
@@ -89,10 +91,10 @@
                 <version>2.22.2</version>
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
-                    <forkCount>2</forkCount>
+                    <forkCount>${threads}</forkCount>
                     <parallel>suites</parallel>
-                    <threadCount>2</threadCount>
-                    <reuseForks>true</reuseForks>
+                    <threadCount>${threads}</threadCount>
+                    <reuseForks>false</reuseForks>
                     <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
