--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 
   <groupId>org.selenide.examples</groupId>
   <artifactId>selenide-allure-junit</artifactId>
-  <version>2.0</version>
+  <version>2.1</version>
   
   <properties>
     <allure.version>1.5.4</allure.version>
-    <aspectj.version>1.9.4</aspectj.version>
+    <aspectj.version>1.9.5</aspectj.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -31,7 +31,13 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>5.4.1</version>
+      <version>5.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.browserup</groupId>
+      <artifactId>browserup-proxy</artifactId>
+      <version>2.0.1</version>
+      <type>zip</type>
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
@@ -41,7 +47,7 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>xls-test</artifactId>
-      <version>1.4.1</version>
+      <version>1.4.2</version>
     </dependency>
   </dependencies>
 
@@ -90,7 +96,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.4.21.v20190926</version>
+        <version>9.4.28.v20200408</version>
         <configuration>
           <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
         </configuration>
