--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,15 @@
       <version>5.12.1</version>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>29.0-jre</version>
+    </dependency>
+    <dependency>
       <groupId>com.browserup</groupId>
       <artifactId>browserup-proxy</artifactId>
       <version>2.1.0</version>
-      <type>zip</type>
+      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
