--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>5.17.0</version>
+      <version>5.17.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.30</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
