--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <groupId>org.selenide.examples</groupId>
   <artifactId>selenide-allure-junit</artifactId>
-  <version>2.2</version>
+  <version>2.3</version>
 
   <properties>
-    <allure.version>2.17.0</allure.version>
+    <allure.version>2.17.2</allure.version>
     <aspectj.version>1.9.7</aspectj.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -35,8 +35,8 @@
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
-      <artifactId>selenide</artifactId>
-      <version>5.25.0</version>
+      <artifactId>selenide-junit4</artifactId>
+      <version>6.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -47,12 +47,6 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>31.0.1-jre</version>
-    </dependency>
-    <dependency>
-      <groupId>com.browserup</groupId>
-      <artifactId>browserup-proxy</artifactId>
-      <version>2.1.2</version>
-      <type>pom</type>
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
@@ -82,7 +76,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-archetype-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -126,7 +120,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>11.0.6</version>
+        <version>11.0.7</version>
         <configuration>
           <webAppSourceDirectory>${project.build.directory}/site</webAppSourceDirectory>
           <supportedPackagings>
