--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <groupId>org.selenide.examples</groupId>
   <artifactId>selenide-allure-junit</artifactId>
-  <version>2.3</version>
+  <version>2.4</version>
 
   <properties>
-    <allure.version>2.17.3</allure.version>
+    <allure.version>2.18.0</allure.version>
     <aspectj.version>1.9.9.1</aspectj.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -25,7 +25,7 @@
   <dependencies>
     <dependency>
       <groupId>io.qameta.allure</groupId>
-      <artifactId>allure-junit4</artifactId>
+      <artifactId>allure-junit5</artifactId>
       <version>${allure.version}</version>
     </dependency>
     <dependency>
@@ -35,8 +35,14 @@
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
-      <artifactId>selenide-junit4</artifactId>
+      <artifactId>selenide</artifactId>
       <version>6.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.8.2</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -94,7 +100,7 @@
           <properties>
             <property>
               <name>listener</name>
-              <value>io.qameta.allure.junit4.AllureJunit4</value>
+              <value>io.qameta.allure.junit5.AllureJunit5</value>
             </property>
           </properties>
           <systemProperties>
@@ -127,6 +133,9 @@
         <groupId>io.qameta.allure</groupId>
         <artifactId>allure-maven</artifactId>
         <version>2.11.2</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+        </configuration>
       </plugin>
     </plugins>
   </build>
