--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>8</source>
+          <target>8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -127,6 +127,9 @@
               <value>${project.build.directory}/allure-results</value>
             </property>
           </systemProperties>
+          <systemPropertyVariables>
+            <selenide.headless>true</selenide.headless>
+          </systemPropertyVariables>
         </configuration>
         <dependencies>
           <dependency>
