make compiler persist parameter names

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
         <configuration>
           <source>8</source>
           <target>8</target>
+          <parameters>true</parameters>
         </configuration>
       </plugin>
       <plugin>
