--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
-      <artifactId>selenide</artifactId>
-      <version>6.12.3</version>
+      <artifactId>selenide-full-screenshot</artifactId>
+      <version>6.18.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
